--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrace dat (Automatic Translation)
 category.data-providers=Poskytovatelé dat (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Vývoj
 category.devices=zařízení (Automatic Translation)
 category.digital-signature=Digitální podpis (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Výchozí stránka po odhlášení
 default-logout-page-help=Toto je stránka, na kterou jsou uživatelé po odhlášení automaticky přesměrováni. Chcete-li například použít výchozí stránku odhlášení, nastavte http://localhost:8080/web/guest/logout /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Výchozí maximální počet připojení na trasu (Automatic Translation)
 default-page-audit-image-alt-description=Výchozí obrázek auditu stránky. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Výchozí vlastnosti
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Výchozí běžné téma
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Vybrat datová pole (Automatic Translation)
 select-date=Vybrat datum
 select-date-range=Vybrat rozsah dat (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
