--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integración de datos
 category.data-providers=Proveedores de datos
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Desarrollo
 category.devices=Dispositivos
 category.digital-signature=Firma digital
@@ -4894,6 +4895,7 @@ default-logout-page=Página de salida por defecto
 default-logout-page-help=Esta es la página a la que los usuarios serán automáticamente redireccionados después de que se cierren sesión. Por ejemplo, si quiere que la página inicial sea http://localhost:8080/web/guest/login, establézcala como /web/guest/login.
 default-max-connections-per-route=Número máximo de conexiones predeterminadas por ruta
 default-page-audit-image-alt-description=Imagen por defecto de auditoría de página.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferencias por defecto
 default-product-display-page=Página de visualización de producto por defecto
 default-regular-theme=Tema por defecto del portal
@@ -13970,6 +13972,7 @@ select-css-client-extensions=Seleccionar extensiones de cliente de CSS
 select-data-fields=Seleccionar campos de datos
 select-date=Seleccionar fecha
 select-date-range=Seleccionar intervalo de fechas
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Seleccionar destino
 select-destination-folder-for-x-item=Seleccionar carpeta de destino para {0} elemento
 select-destination-folder-for-x-items=Seleccione la carpeta de destino para {0} elementos.
