--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=डेटा एकीकरण
 category.data-providers=डेटा प्रदाता (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=डेवेलपमेंट
 category.devices=उपकरणों (Automatic Translation)
 category.digital-signature=डिजिटल सिग्नेचर (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=डिफ़ॉल्ट लॉगआउट पेज
 default-logout-page-help=यह वह पृष्ठ है जिसे लॉग आउट करने के बाद उपयोगकर्ताओं को स्वचालित रूप से रीडायरेक्ट किया जाता है। उदाहरण के लिए, यदि आप चाहते हैं कि डिफ़ॉल्ट लॉगआउट पेज http://localhost:8080/web/guest/logout हो, तो इसे /web/guest/logout पर सेट करें । (Automatic Translation)
 default-max-connections-per-route=प्रति रूट डिफ़ॉल्ट अधिकतम कनेक्शन (Automatic Translation)
 default-page-audit-image-alt-description=डिफ़ॉल्ट पेज ऑडिट छवि। (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=डिफ़ॉल्ट वरीयताएँ
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=डिफ़ॉल्ट नियमित थीम
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=डेटा फ़ील्ड चुनें
 select-date=दिनांक चुनें
 select-date-range=तिथि सीमा का चयन करें
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
