--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -2814,6 +2814,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrazione dei dati (Automatic Translation)
 category.data-providers=Fornitori di dati (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Sviluppo
 category.devices=Dispositivi
 category.digital-signature=firma digitale (Automatic Translation)
@@ -4893,6 +4894,7 @@ default-logout-page=Pagina di Logout predefinita
 default-logout-page-help=Questa è la pagina su cui saranno ridirezionati gli utenti dopo il logout. Ad esempio, se vuoi che la pagina predefinita dopo il logout sia http://localhost:8080/web/guest/logout, imposta questo valore a /web/guest/logout.
 default-max-connections-per-route=Connessioni max predefinite per route (Automatic Translation)
 default-page-audit-image-alt-description=Immagine di controllo pagina predefinita. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferenze Predefinite
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Tema predefinito
@@ -13969,6 +13971,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Selezionare campi dati (Automatic Translation)
 select-date=Seleziona Data
 select-date-range=Seleziona Intervallo di Date
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
