--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=שילוב נתונים (Automatic Translation)
 category.data-providers=ספקי נתונים (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=פיתוח
 category.devices=מכשירים
 category.digital-signature=חתימה דיגיטלית (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=ברירת מחדל של דף יציאה
 default-logout-page-help=זהו הדף שאליו משתמשים מנותבים אוטומטית לאחר היציאה. למשל, אם אתה מעוניין שדף היציאה המוגדר כברירת מחדל יהיה http://localhost:8080/web/guest/logout הגדר אותו כ-/web/guest/logout.
 default-max-connections-per-route=מספר קישורים מרבי לנתיב כברירת מחדל
 default-page-audit-image-alt-description=תמונת ברירת מחדל של ביקורת דף. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=העדפות לפי ברירת מחדל
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=ברירת מחדל של נושא רגיל
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=בחירת שדות נתונים (Automatic Translation)
 select-date=בחר תאריך
 select-date-range=בחירת טווח תאריכים (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
