--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrering av data (Automatic Translation)
 category.data-providers=Datatilbydere
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Utvikling
 category.devices=Enheter
 category.digital-signature=Digital signatur (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Standard utloggingsside
 default-logout-page-help=Dette er siden som brukere automatisk omadresseres til etter at de har logget av. Hvis du for eksempel vil at standard avloggingsside skal være http://localhost:8080/web/guest/logout, setter du dette til /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Standard maks antall tilkoblinger per rute (Automatic Translation)
 default-page-audit-image-alt-description=Standard bilde av sideovervåking. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Standardinnstillinger
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Standardtema
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Velg datafelt (Automatic Translation)
 select-date=Velg dato
 select-date-range=Velg datointervall
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Velg målmappe for {0} ressurs
 select-destination-folder-for-x-items=Velg målmape for {0} ressurser
