--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Diálogos personalizados
 category.data-integration=Integração de dados
 category.data-providers=Provedores de Dados
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Desenvolvimento
 category.devices=Dispositivos
 category.digital-signature=Assinatura digital
@@ -4894,6 +4895,7 @@ default-logout-page=Página da saída padrão
 default-logout-page-help=Esta é a página para a qual os usuários serão automaticamente redirecionados após saírem. Por exemplo, se você quer que a página de saída seja http://localhost:8080/web/guest/logout, defina como /web/guest/logout.
 default-max-connections-per-route=Número Máximo Padrão de Conexões por Rota
 default-page-audit-image-alt-description=Imagem de auditoria da página padrão.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferências padrão
 default-product-display-page=Página de exibição de produto padrão
 default-regular-theme=Tema regular padrão
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Selecionar extensões CSS Client
 select-data-fields=Selecionar campos de dados
 select-date=Selecionar Data
 select-date-range=Selecionar período
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Selecionar destino
 select-destination-folder-for-x-item=Selecione a pasta de destino para {0} item
 select-destination-folder-for-x-items=Selecione a pasta de destino para {0} itens
