--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrácia údajov (Automatic Translation)
 category.data-providers=Poskytovatelia údajov (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Vývoj
 category.devices=Zariadenia (Automatic Translation)
 category.digital-signature=Digitálny podpis (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Predvolená odhlasovacia stránka
 default-logout-page-help=Na túto stránku bude používateľ automaticky presmerovaný po odhlásení. Napríklad, ak chcete aby predvolená odhlasovacia stránka bola http://localhost:8080/web/guest/logout, nastavte toto na /web/guest/logout.
 default-max-connections-per-route=Predvolené maximálne pripojenia na trasu (Automatic Translation)
 default-page-audit-image-alt-description=Obrázok predvoleného auditu strany. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Predvolené nastavenia
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Predvolená bežná téma
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Vybrať údajové polia (Automatic Translation)
 select-date=Vybrať dátum
 select-date-range=Vybrať rozsah dátumov (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
