--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Tích hợp dữ liệu (Automatic Translation)
 category.data-providers=Nhà cung cấp dữ liệu (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Phát triển
 category.devices=Thiết bị (Automatic Translation)
 category.digital-signature=Chữ ký điện tử (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Địa chỉ đăng xuất mặc định
 default-logout-page-help=Đây là trang mà người dùng được tự động chuyển hướng đến sau khi đăng xuất. Ví dụ: nếu bạn muốn trang đăng xuất mặc định được http://localhost:8080/web/guest/logout, hãy đặt trang này thành /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Kết nối Tối đa Mặc định trên mỗi Tuyến đường (Automatic Translation)
 default-page-audit-image-alt-description=Ảnh Kiểm tra Trang Mặc định. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Cấu hình mặc định
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Giao diện mặc định
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Chọn Trường Dữ liệu (Automatic Translation)
 select-date=Chọn ngày
 select-date-range=Chọn Phạm vi Ngày (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
