--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookie
 category.custom-dialogs=自定义对话框
 category.data-integration=数据集成
 category.data-providers=数据提供商
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=开发
 category.devices=设备
 category.digital-signature=数字签名
@@ -4894,6 +4895,7 @@ default-logout-page=默认登出页面
 default-logout-page-help=用户注销后将自动重新定向到此页面。例如，如果您想默认注销页面为 http://localhost:8080/web/guest/logout,您需设置为/web/guest/logout.
 default-max-connections-per-route=每条路线的默认最大连接数
 default-page-audit-image-alt-description=默认页面审核图像。
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=默认偏好设置
 default-product-display-page=默认产品显示页
 default-regular-theme=默认常规主题
@@ -13970,6 +13972,7 @@ select-css-client-extensions=选择 CSS 客户端扩展
 select-data-fields=选择数据字段
 select-date=选择日期
 select-date-range=选择日期范围
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=选择目标
 select-destination-folder-for-x-item=选择 {0} 条目的目标文件夹
 select-destination-folder-for-x-items=为{0}条目选择目标文件夹。
