--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=資料整合
 category.data-providers=資料提供者
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=開發
 category.devices=設備
 category.digital-signature=數位簽章
@@ -4894,6 +4895,7 @@ default-logout-page=預設登出頁面
 default-logout-page-help=這是使用者登出後被自動導向的頁面。例如，如果您想要預設登出頁面是http://localhost:8080/web/guest/logout，設定這到/web/guest/logout。
 default-max-connections-per-route=每條路線的預設最大連線數
 default-page-audit-image-alt-description=預設頁面審核圖檔。
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=預設偏好
 default-product-display-page=預設商品顯示頁
 default-regular-theme=預設一般背景主題
@@ -13969,6 +13971,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=選擇資料欄位
 select-date=選擇日期
 select-date-range=選擇日期區間
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=選擇 {0} 項目的目標資料夾
 select-destination-folder-for-x-items=選擇 {0} 項目的目標資料夾
