--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -2815,6 +2815,7 @@ category.cookies=ملفات تعريف الارتباط
 category.custom-dialogs=مربعات حوار مخصصة
 category.data-integration=تكامل البيانات
 category.data-providers=موفرو البيانات
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=تطوير
 category.devices=الأجهزة
 category.digital-signature=التوقيع الرقمي
@@ -4894,6 +4895,7 @@ default-logout-page=صفحة تسجيل الخروج الافتراضية
 default-logout-page-help=هذه هي الصفحة التي تتم إعادة توجيه المستخدمين تلقائيًا إليها بعد تسجيل الخروج. على سبيل المثال، إذا كنت تريد أن تكون صفحة تسجيل الخروج الافتراضية http://localhost:8080/web/guest/logout، فقم بتعيينها إلى /web/guest/logout.
 default-max-connections-per-route=الاتصالات القصوى الافتراضية لكل طريق
 default-page-audit-image-alt-description=صورة تدقيق الصفحة الافتراضية.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=التفضيلات الإعتيادية
 default-product-display-page=صفحة عرض المنتج الافتراضية
 default-regular-theme=تشكيلة الموقع الافتراضية
@@ -13968,6 +13970,7 @@ select-css-client-extensions=تحديد امتدادات عميل CSS
 select-data-fields=تحديد حقول البيانات
 select-date=إختر التاريخ
 select-date-range=حدد نطاق التاريخ
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=اختيار الوجهة
 select-destination-folder-for-x-item=تحديد مجلد الوجهة لـ {0} عنصر
 select-destination-folder-for-x-items=حدد مجلد الوجهة لـ {0} من العناصر.
