--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -2815,6 +2815,7 @@ category.cookies=Galetes
 category.custom-dialogs=Quadres de diàleg personalitzats
 category.data-integration=Integració de dades
 category.data-providers=Proveïdors de dades
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Desenvolupament
 category.devices=Dispositius
 category.digital-signature=Signatura digital
@@ -4894,6 +4895,7 @@ default-logout-page=Pàgina de sortida per defecte
 default-logout-page-help=Es redireccionarà a aquesta pàgina a tots els usuaris després de desconnectar-se. Per exemple, si voleu que la pàgina de sortida per defecte sigui http://localhost:8080/web/guest/logout, introduïu-ho com a /web/guest/logout.
 default-max-connections-per-route=Connexions màximes predeterminades per ruta
 default-page-audit-image-alt-description=Imatge de l'auditoria de pàgina per defecte.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Preferències per defecte
 default-product-display-page=Pàgina de visualització del producte per defecte
 default-regular-theme=Tema habitual per defecte
@@ -13970,6 +13972,7 @@ select-css-client-extensions=Seleccioneu extensions de client CSS
 select-data-fields=Selecciona els camps de dades
 select-date=Seleccioneu una data
 select-date-range=Seleccioneu l'interval de dates
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Selecciona la destinació
 select-destination-folder-for-x-item=Selecciona la carpeta de destí de {0} element/s
 select-destination-folder-for-x-items=Seleccioneu la carpeta de destí de {0} elements.
