--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Duomenų integravimas (Automatic Translation)
 category.data-providers=Duomenų teikėjai (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Plėtros (Automatic Translation)
 category.devices=Įrenginiai (Automatic Translation)
 category.digital-signature=Skaitmeninis parašas (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Numatytasis atsijungimo puslapis (Automatic Translation)
 default-logout-page-help=Tai puslapis, į kurį vartotojai automatiškai nukreipiami išsiregistravus. Pavyzdžiui, jei norite, kad numatytasis atsijungimo puslapis būtų http://localhost:8080/web/guest/logout, nustatykite jį kaip /web/guest/logout. (Automatic Translation)
 default-max-connections-per-route=Numatytieji maksimalūs ryšiai pagal maršrutą (Automatic Translation)
 default-page-audit-image-alt-description=Numatytasis puslapio audito vaizdas. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Numatytosios nuostatos (Automatic Translation)
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Numatytoji įprasta tema (Automatic Translation)
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Pasirinkti duomenų laukus (Automatic Translation)
 select-date=Pasirinkti datą (Automatic Translation)
 select-date-range=Pasirinkti datų diapazoną (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
