--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=Integrasi Data (Automatic Translation)
 category.data-providers=Pembekal Data (Automatic Translation)
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Pembangunan
 category.devices=Peranti (Automatic Translation)
 category.digital-signature=Tandatangan Digital (Automatic Translation)
@@ -4894,6 +4895,7 @@ default-logout-page=Halaman Log Keluar Lalai (Automatic Translation)
 default-logout-page-help=Ini adalah halaman yang pengguna diarahkan semula secara automatik selepas log keluar. Contohnya, jika anda mahu halaman log keluar lalai http://localhost:8080/web/guest/logout, tetapkan ini kepada /web/tetamu/log keluar. (Automatic Translation)
 default-max-connections-per-route=Sambungan Max Lalai bagi setiap Laluan (Automatic Translation)
 default-page-audit-image-alt-description=Imej Audit Halaman Lalai. (Automatic Translation)
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Keutamaan Lalai (Automatic Translation)
 default-product-display-page=Default Product Display Page (Automatic Copy)
 default-regular-theme=Tema Biasa Lalai (Automatic Translation)
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=Pilih Medan Data (Automatic Translation)
 select-date=Pilih Tarikh (Automatic Translation)
 select-date-range=Pilih Julat Tarikh (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=Select Destination Folder for {0} Item (Automatic Copy)
 select-destination-folder-for-x-items=Select Destination Folder for {0} Items (Automatic Copy)
