--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies
 category.custom-dialogs=Anpassade dialoger
 category.data-integration=Dataintegrering
 category.data-providers=Dataproviders
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=Utveckling
 category.devices=Enheter
 category.digital-signature=Digital underskrift
@@ -4894,6 +4895,7 @@ default-logout-page=Utloggningssida
 default-logout-page-help=Det här är sidan som användare omdirigeras till automatiskt när de loggar ut. Om du exempelvis vill att den förinställda utloggningssidan ska vara http://localhost:8080/web/guest/logout anger du /web/guest/logout.
 default-max-connections-per-route=Standard för maximalt antal anslutningar per flöde
 default-page-audit-image-alt-description=Bild för förinställd sidgranskning.
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=Startinställningar
 default-product-display-page=Visningssida för standardprodukt
 default-regular-theme=Standardtema
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Välj CSS-klienttillägg
 select-data-fields=Välj datafält
 select-date=Välj datum
 select-date-range=Välj datumintervall
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Välj destination
 select-destination-folder-for-x-item=Välj målmapp för {0} objekt
 select-destination-folder-for-x-items=Välj målmapp för {0} objekt.
