--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -2815,6 +2815,7 @@ category.cookies=Cookies (Automatic Copy)
 category.custom-dialogs=Custom Dialogs (Automatic Copy)
 category.data-integration=การผนวกรวมดาต้า
 category.data-providers=ผู้ให้บริการข้อมูล
+category.default-portlet-decorator=Default Portlet Decorator (Automatic Copy)
 category.development=การพัฒนา
 category.devices=อุปกรณ์
 category.digital-signature=ลายมือชื่อดิจิทัล
@@ -4894,6 +4895,7 @@ default-logout-page=ค่าเริ่มต้นของหน้าออ
 default-logout-page-help=นี่คือหน้าของผู้ใช้ที่จะถูกเปลี่ยนรีไดเร็คไปโดยอัตโนมัติหลังจากออกจากระบบ ตัวอย่างเช่น หากต้องการให้หน้าออกจากระบบเริ่มต้นเป็น http://localhost:8080/web/guest/logout ให้ตั้งค่านี้เป็น /web/guest/logout
 default-max-connections-per-route=ค่าเริ่มต้นของการเชื่อมต่อสูงสุดต่อเส้นทาง
 default-page-audit-image-alt-description=ตรวจสอบค่าเริ่มต้นของรูปภาพ
+default-portlet-decorator-configuration-name=Default Portlet Decorator (Automatic Copy)
 default-preferences=ค่ากำหนดเริ่มต้น
 default-product-display-page=หน้าแสดงผลิตภัณฑ์เริ่มต้น
 default-regular-theme=ธีมเริ่มต้น
@@ -13968,6 +13970,7 @@ select-css-client-extensions=Select CSS Client Extensions (Automatic Copy)
 select-data-fields=เลือกเขตข้อมูล (Automatic Translation)
 select-date=เลือกวันที่ (Automatic Translation)
 select-date-range=เลือกช่วงวันที่ (Automatic Translation)
+select-default-portlet-decorator-id=Select Default Portlet Decorator Id (Automatic Copy)
 select-destination=Select Destination (Automatic Copy)
 select-destination-folder-for-x-item=เลือกโฟลเดอร์ปลายทางสำหรับรายการ {0}
 select-destination-folder-for-x-items=เลือกโฟลเดอร์ปลายทางสำหรับรายการ {0}
